--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
+        <groupId>com.zjc</groupId>
+        <artifactId>film-project</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.hope</groupId>
+    <!--web项目-->
+    <groupId>com.zjc</groupId>
     <artifactId>film-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -11,19 +18,19 @@
     <name>film-web</name>
     <description>Demo project for Spring Boot</description>
 
-    <parent>
-        <groupId>com.film</groupId>
-        <artifactId>film-project</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <film.util.version>1.0.0</film.util.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.zjc</groupId>
+            <artifactId>film-util</artifactId>
+            <version>${film.util.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -40,7 +47,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
