--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -23,6 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <film.util.version>1.0.0</film.util.version>
+        <film.service.version>1.0-SNAPSHOT</film.service.version>
     </properties>
 
     <dependencies>
@@ -30,6 +31,11 @@
             <groupId>com.zjc</groupId>
             <artifactId>film-util</artifactId>
             <version>${film.util.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zjc</groupId>
+            <artifactId>film-service</artifactId>
+            <version>${film.service.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
