--- a/film-util/pom.xml
+++ b/film-util/pom.xml
@@ -12,7 +12,7 @@
     <!--工具-->
     <groupId>com.zjc</groupId>
     <artifactId>film-util</artifactId>
-    <version>1.0.0</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>film-util</name>
