修改util项目为common

--- a/film-service/pom.xml
+++ b/film-service/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
-            <artifactId>film-util</artifactId>
+            <artifactId>film-common</artifactId>
             <version>${version}</version>
         </dependency>
     </dependencies>
