--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -27,7 +27,7 @@
     <dependencies>
         <dependency>
             <groupId>com.zjc</groupId>
-            <artifactId>film-util</artifactId>
+            <artifactId>film-common</artifactId>
             <version>${version}</version>
         </dependency>
         <dependency>
