--- a/film-common/pom.xml
+++ b/film-common/pom.xml
@@ -11,11 +11,11 @@
 
     <!--工具-->
     <groupId>com.zjc</groupId>
-    <artifactId>film-util</artifactId>
+    <artifactId>film-common</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>film-util</name>
+    <name>film-common</name>
     <description>Demo project for Spring Boot</description>
 
     <dependencies>
