--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <modules>
         <module>film-web</module>
-        <module>film-util</module>
+        <module>film-common</module>
         <module>film-service</module>
         <module>film-dao</module>
     </modules>
