--- a/film-web/src/main/resources/application.properties
+++ b/film-web/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8080
-spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.template-loader-path=classpath:/templates/freemaker/
