--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
+    <name>file-web</name>
 
     <modules>
         <module>film-web</module>
