增加定时任务项目，修改日志打印等级

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>film-common</module>
         <module>film-service</module>
         <module>film-dao</module>
+        <module>film-job</module>
     </modules>
 
     <dependencyManagement>
