--- a/film-common/pom.xml
+++ b/film-common/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>spring-boot-starter-redis</artifactId>
             <version>1.4.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
     </dependencies>
 
 
