修改配置文件方面的

--- a/film-web/src/main/resources/application.properties
+++ b/film-web/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-server.port=8080
-logging.level.root=INFO
-spring.freemarker.template-loader-path=classpath:/templates/freemaker/
+#卧槽 玩的就是springboot 用个鸡儿properties文件
+#server.port=8080
+#spring.freemarker.template-loader-path=classpath:/templates/freemaker/
+#logging.config=classpath:log4j2.xml
