--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
+                <artifactId>spring-boot-starter</artifactId>
                 <version>2.0.5.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
