添加德鲁伊连接池配置

--- a/film-web/src/main/resources/druid.properties
+++ b/film-web/src/main/resources/druid.properties
@@ -1,9 +1,9 @@
 #durid
 spring.datasource.druid.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/springboot_mybatis
+spring.datasource.druid.url=jdbc:mysql://47.100.237.222:3306/test
 spring.datasource.druid.username=root
-spring.datasource.druid.password=root
+spring.datasource.druid.password=123456
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
 spring.datasource.druid.initialSize=5
@@ -23,7 +23,7 @@ spring.datasource.druid.testOnReturn=false
 spring.datasource.druid.poolPreparedStatements=true
 spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙 
-spring.datasource.druid.filters=stat,wall,log4j
+spring.datasource.druid.filters=stat,wall,logback
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # 合并多个DruidDataSource的监控数据
