--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -27,6 +27,11 @@
     <dependencies>
         <dependency>
             <groupId>com.zjc</groupId>
+            <artifactId>film-dao</artifactId>
+            <version>${film.dao.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
             <version>${version}</version>
         </dependency>
@@ -55,6 +60,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zjc</groupId>
+            <artifactId>film-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
