--- a/film-web/src/main/resources/druid.properties
+++ b/film-web/src/main/resources/druid.properties
@@ -1,7 +1,7 @@
 #durid
 spring.datasource.druid.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://47.100.237.222:3306/test
+spring.datasource.druid.url=jdbc:mysql://47.100.237.222:3306/test?useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 # 下面为连接池的补充设置，应用到上面所有数据源中
