--- a/film-web/src/main/resources/application.yml
+++ b/film-web/src/main/resources/application.yml
@@ -9,24 +9,27 @@ spring:
     database: 0
     timeout: 2000
   kafka:
-    bootstrap-servers: 47.100.237.222:9092
     producer:
+        bootstrap-servers: 47.100.237.222:9092
         key-serializer: org.apache.kafka.common.serialization.StringSerializer
-        value-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
         retries: 0
         batch-size: 16384
         buffer-memory: 33554432
         properties:
           linger.ms: 1
     consumer:
-        key-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
-        value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
-        auto-commit-interval: 100
-        heartbeat-interval: 500
-        #每个批次获取数
-        max-poll-records: 1000
-        auto-offset-reset: earliest
-        group-id: groupTest
+          enable-auto-commit: false
+          group-id: feature-forwarding
+          #earliest #latest
+          auto-offset-reset: earliest
+          #kafka ip port
+          bootstrap-servers: 47.100.237.222:9092
+          auto-commit-interval: 100
+          heartbeat-interval: 500
+          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+          value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+          max-poll-records: 1000
     listener:
           # kafka消费者并发数
           concurrency: 20
