--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -22,13 +22,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-dao</artifactId>
-            <version>${film.dao.version}</version>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
@@ -61,12 +62,32 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.zjc</groupId>
-            <artifactId>film-dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--eureka-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
+    <!--springCloud-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
@@ -93,6 +114,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
