--- a/film-common/pom.xml
+++ b/film-common/pom.xml
@@ -12,7 +12,7 @@
     <!--工具-->
     <groupId>com.zjc</groupId>
     <artifactId>film-common</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project-version}</version>
 
     <name>film-common</name>
     <description>Demo project for Spring Boot</description>
