--- a/film-dao/pom.xml
+++ b/film-dao/pom.xml
@@ -12,14 +12,14 @@
 
     <groupId>com.zjc</groupId>
     <artifactId>film-dao</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project-version}</version>
     <name>film-dao</name>
 
     <dependencies>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
         <!--德鲁伊连接池-->
         <dependency>
