--- a/film-job/pom.xml
+++ b/film-job/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>film-job</artifactId>
     <name>film-job</name>
     <packaging>jar</packaging>
+    <version>${project-version}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,12 +24,12 @@
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-service</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
