--- a/film-service/pom.xml
+++ b/film-service/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.zjc</groupId>
     <artifactId>film-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project-version}</version>
     <build>
         <plugins>
             <plugin>
@@ -34,12 +34,12 @@
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-dao</artifactId>
-            <version>${film.dao.version}</version>
+            <version>${project-version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
     </dependencies>
 
