--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -12,7 +12,7 @@
     <!--web项目-->
     <groupId>com.zjc</groupId>
     <artifactId>film-web</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project-version}</version>
     <packaging>jar</packaging>
 
     <name>film-web</name>
@@ -29,17 +29,17 @@
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-dao</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-service</artifactId>
-            <version>${version}</version>
+            <version>${project-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,8 +64,8 @@
         </dependency>
         <!--eureka-->
         <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
         <!--</dependency>-->
     </dependencies>
     <!--springCloud-->
