--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <properties>
+        <project-version>1.0-SNAPSHOT</project-version>
+    </properties>
+
     <groupId>com.zjc</groupId>
     <artifactId>film-project</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>${project-version}</version>
+    <inceptionYear>2019</inceptionYear>
     <modelVersion>4.0.0</modelVersion>
     <name>file-web</name>
+    <url>http://zjc.wait-hope.com:8080</url>
 
     <modules>
         <module>film-web</module>
