--- a/film-service/pom.xml
+++ b/film-service/pom.xml
@@ -11,7 +11,8 @@
 
     <groupId>com.zjc</groupId>
     <artifactId>film-service</artifactId>
-    <version>${project-version}</version>
+    <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -26,20 +27,16 @@
     </build>
     <name>film-service</name>
 
-    <properties>
-        <film.dao.version>1.0-SNAPSHOT</film.dao.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-dao</artifactId>
-            <version>${project-version}</version>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
-            <version>${project-version}</version>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 
