--- a/film-web/pom.xml
+++ b/film-web/pom.xml
@@ -12,8 +12,8 @@
     <!--web项目-->
     <groupId>com.zjc</groupId>
     <artifactId>film-web</artifactId>
-    <version>${project-version}</version>
     <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
     <name>film-web</name>
     <description>Demo project for Spring Boot</description>
@@ -29,17 +29,17 @@
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-dao</artifactId>
-            <version>${project-version}</version>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-common</artifactId>
-            <version>${project-version}</version>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>com.zjc</groupId>
             <artifactId>film-service</artifactId>
-            <version>${project-version}</version>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,10 +63,10 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <!--eureka-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
     <!--springCloud-->
     <dependencyManagement>
