--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <properties>
-        <project-version>1.0-SNAPSHOT</project-version>
+        <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
     </properties>
 
     <groupId>com.zjc</groupId>
     <artifactId>film-project</artifactId>
     <packaging>pom</packaging>
-    <version>${project-version}</version>
+    <version>1.0-SNAPSHOT</version>
     <inceptionYear>2019</inceptionYear>
     <modelVersion>4.0.0</modelVersion>
     <name>file-web</name>
@@ -29,7 +29,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
-                <version>2.0.5.RELEASE</version>
+                <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
