修复springCloud启动失败原因 为版本问题

--- a/film-web/src/main/resources/application.yml
+++ b/film-web/src/main/resources/application.yml
@@ -38,4 +38,4 @@ logging:
 eureka:
   client:
     service-url:
-      defaultZone: http://47.100.237.222:8081/
+      defaultZone: http://47.100.237.222:8081/eureka/
